; ModuleID = '/home/carl/AnghaBench/freebsd/sys/x86/acpica/extr_madt.c_madt_probe.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/x86/acpica/extr_madt.c_madt_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ACPI_SIG_MADT = common dso_local global i32 0, align 4
@madt_physaddr = common dso_local global i64 0, align 8
@ENXIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @madt_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @madt_probe() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @ACPI_SIG_MADT, align 4
  %3 = call i64 @acpi_find_table(i32 %2)
  store i64 %3, i64* @madt_physaddr, align 8
  %4 = load i64, i64* @madt_physaddr, align 8
  %5 = icmp eq i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = load i32, i32* @ENXIO, align 4
  store i32 %7, i32* %1, align 4
  br label %9

8:                                                ; preds = %0
  store i32 -50, i32* %1, align 4
  br label %9

9:                                                ; preds = %8, %6
  %10 = load i32, i32* %1, align 4
  ret i32 %10
}

declare dso_local i64 @acpi_find_table(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
